<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    tools:context=".summary.SummaryActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        >

        <ImageButton
            android:id="@+id/back_arrow_button"
            android:layout_width="38dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_height="38dp"
            android:background="@drawable/ic_oval"
            android:src="@drawable/ic_back_arrow"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:text="@string/settings_title"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />
        </RelativeLayout>
    <View
        android:layout_below="@id/header"
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator_color"/>

    <LinearLayout
        android:layout_below="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:padding="15dp"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/measure_unites_text"
            android:textStyle="bold"
            android:textColor="@color/text_black"
            android:textSize="15sp"
            />
        <RadioButton
            android:id="@+id/imperial"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imperial_text"
            />
        <RadioButton
            android:id="@+id/metric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metric_text"
            />
    </RadioGroup>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/me_desc"
            android:textSize="13sp"
            android:text="@string/measure_unites_desc"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/done_button"
        style="@style/Onestep.ButtonPrimaryPink"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/done_text"
        android:visibility="visible"
        />
</RelativeLayout>